# compose-manager

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build-image.sh  compose.yaml  test.sh
.github/workflows/: build.yml
dashboard/: Cargo.toml  Dockerfile  index.html
dashboard/src/: main.rs
src/: main.rs
