[package]
name = "compose-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
tokio-stream = "0.1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
dstack-sdk-types = { git = "https://github.com/Dstack-TEE/dstack" }
http-client-unix-domain-socket = "0.1.1"
